--- a/github.html
+++ b/github.html
@@ -21,7 +21,7 @@ projects :
 <div class="slideshow-container">
 	{% for project in page.projects %}
 	<div class="mySlide fade Project">
-	   <iframe src= {{ project.link }} style="width : 800px; height : 800px"/>
+		<iframe src= {{ project.link }}></iframe>
 	</div>
 	{% endfor %}
 	<a class="prev" onclick="showSlide(slideIndex-1)">&#10094;</a>
