--- a/projects.html
+++ b/projects.html
@@ -79,7 +79,7 @@ projects:
 ---
 <div class="slideshow-container">
 	{% for project in page.projects %}
-	<div class="mySlide fade Project">
+	<div class="mySlide fade Project" style="border: none; ">
 		<a href={{project.link}} style="float: left; margin: auto; width: 100%; text-align: center;"><h2>{{ project.title }}</h2></a>
 		<div class="Intro">
 			<img src={{project.image}}>
