--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@ layout : default
 
 <p>I'm a rising sophomore at Olin College.</p>
 <p>My core interests are Robotics -- all aspects of Robotics, encompassing software, electrical, and mechanical components, are fascinating to me.</p>
-<p>My experiences include Machine Learning, Computer Vision, Android Development, Robot Design/Fabrication, etc.</p>
+<p>My experiences include Machine Learning, Computer Vision, Computer Graphics, App Development, Robot Design/Fabrication, etc.</p>
 
 {% assign languages = "C|C++|Python|Javascript|HTML|Bash|Java|MATLAB" | split: "|" %}
-{% assign frameworks = "ROS|CUDA|MySQL|OpenGL|WebGL|MongoDB|Node/Express|QT|WINAPI|Android" | split: "|" %}
-{% assign fabrications = "3D Printing|Sheet Metal|Mill|Lathe" | split: "|" %}
+{% assign frameworks = "ROS|CUDA|MySQL|OpenGL|WebGL|MongoDB|Node/Express|QT|WINAPI|Android|Arduino" | split: "|" %}
+{% assign fabrications = "Solidworks|3D Printing|Sheet Metal|Mill|Lathe" | split: "|" %}
 
 <ul>
 	<li>
