added arduino remote car to github pages

--- a/github.html
+++ b/github.html
@@ -2,6 +2,9 @@
 title : Github Projects
 layout : projects
 projects :
+ - link: ArduinoRemoteCar
+   title: Arduino Remote Car
+   descr: Control Arduino Car Remotely Through ROS
  - link: 2048_AI 
    title: 2048 A.I.
    descr: 2048 AI emulating the Architecture of Google Deepmind
