--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout : default
 
 {% assign languages = "C|C++|Python|Javascript|HTML|Bash|Java|MATLAB" | split: "|" %}
 {% assign frameworks = "ROS|CUDA|MySQL|OpenGL|WebGL|MongoDB|Node/Express|QT|WINAPI|Android|Arduino" | split: "|" %}
-{% assign fabrications = "Solidworks|3D Printing|Sheet Metal|Mill|Lathe" | split: "|" %}
+{% assign fabrications = "Solidworks|3D Printing|Sheet Metal|Mill|Lathe|Mig Welder" | split: "|" %}
 
 <ul>
 	<li>
