updated github projects

--- a/github.html
+++ b/github.html
@@ -8,6 +8,15 @@ projects :
  - link: 2048_AI 
    title: 2048 A.I.
    descr: 2048 AI emulating the Architecture of Google Deepmind
+ - link: RubiksCube
+   title: Rubiks Cube
+   descr: Interactive Rubiks Cube with THREE.js
+ - link: TunaCounter
+   title: Tuna Counter
+   descr: Counting Tuna automation with OpenCV: optical flow, image-processing and segmentation
+ - link: ConvNet 
+   title: Convolutional Neural Network 
+   descr: GPU-Accelerated Convolutional Neural Network framework with CUDA 
  - link: AudioLocalizer
    title: Audio Localizer
    descr: Audio Localizer
@@ -17,6 +26,9 @@ projects :
  - link: DigitParser
    title: Digit Parser
    descr: Neural Network Digit Recognition
+ - link: U_ML 
+   title: Machine-Learning
+   descr: Udacity Machine-Learning Nanodegree Program
  - link: U_ML 
    title: Machine-Learning
    descr: Udacity Machine-Learning Nanodegree Program
