fixed github pages crashing (due to misformatted yaml)

--- a/github.html
+++ b/github.html
@@ -10,13 +10,16 @@ projects :
    descr: 2048 AI emulating the Architecture of Google Deepmind
  - link: RubiksCube
    title: Rubiks Cube
-   descr: Interactive Rubiks Cube with THREE.js
+   descr: Interactive Rubiks Cube with THREE.js 
+ - link: ConvNet
+   title: Convolutional Neural Network
+   descr: GPU-accelerated Convolutional Neural Network with CUDA
  - link: TunaCounter
    title: Tuna Counter
-   descr: Counting Tuna automation with OpenCV: optical flow, image-processing and segmentation
- - link: ConvNet 
-   title: Convolutional Neural Network 
-   descr: GPU-Accelerated Convolutional Neural Network framework with CUDA 
+   descr: "Automated Tuna Counting with OpenCV"
+ - link: Orchestrator
+   title: Orchestrator
+   descr: Rehearsal Schedule Coordination Application
  - link: AudioLocalizer
    title: Audio Localizer
    descr: Audio Localizer
@@ -26,9 +29,6 @@ projects :
  - link: DigitParser
    title: Digit Parser
    descr: Neural Network Digit Recognition
- - link: U_ML 
-   title: Machine-Learning
-   descr: Udacity Machine-Learning Nanodegree Program
  - link: U_ML 
    title: Machine-Learning
    descr: Udacity Machine-Learning Nanodegree Program
