added photo, need lots of updates

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 title : Index
 layout : default
 ---
-
-<p>I'm a rising sophomore at Olin College.</p>
+<img src="images/profile.jpg"/>
+<p>I'm a Rising Junior at Olin College of Engineering.</p>
 <p>My core interests are Robotics -- all aspects of Robotics, encompassing software, electrical, and mechanical components, are fascinating to me.</p>
 <p>My experiences include Machine Learning, Computer Vision, Computer Graphics, App Development, Robot Design/Fabrication, etc.</p>
 
 {% assign languages = "C|C++|Python|Javascript|HTML|Bash|Java|MATLAB" | split: "|" %}
 {% assign frameworks = "ROS|CUDA|MySQL|OpenGL|WebGL|MongoDB|Node/Express|QT|WINAPI|Android|Arduino" | split: "|" %}
-{% assign fabrications = "Solidworks|3D Printing|Sheet Metal|Mill|Lathe|MIG Welder" | split: "|" %}
+{% assign fabrications = "Solidworks|3D Printing|Sheet Metal|Mill(CNC/Manual)|Lathe|MIG Welder" | split: "|" %}
 
 <ul>
 	<li>
