--- a/index.html
+++ b/index.html
@@ -2,42 +2,142 @@
 title : Index
 layout : default
 ---
+<div id="drawing" align="center">
+
+</div>
+
+<script type="text/javascript">
+    if (!String.prototype.format) {
+        String.prototype.format = function() {
+            var args = arguments;
+            return this.replace(/{(\d+)}/g, function(match, number) {
+                return typeof args[number] != 'undefined'
+                    ? args[number]
+                    : match
+                    ;
+            });
+        };
+    }
+
+    var size = 784;
+    var draw = SVG('drawing').size(size, size);
+    function get_triangle(r, i, n, cx, cy, text){
+        var theta = 2*Math.PI / n;
+        var angle = theta * i;
+        var col = hsv2rgb(i/n,1.0,1.0);
+
+        var y = r * Math.cos(theta/2);
+        var x = r * Math.sin(theta/2);
+        var pts = '{0},{1} {2},{3} {4},{5}'.format(0,0, x,-y, -x,-y);
+
+        var tri = draw.polygon(pts).fill({color:col}).stroke({color:'white', width:8});
+        var txt = draw.text(text).fill({color:col});
+        txt.font({
+            family : 'Helvetica',
+            size : 20,
+            fill : col,
+            weight : 'bold'
+        });
+
+        txt.after(tri);
+
+        var dr = r / 10.0;
+        var dt = r / 10.0;
+
+        var gradient = draw.gradient('linear', function(stop) {
+            stop.at(0, '#333');
+            stop.at(1, '#fff');
+        });
+
+        tri.move(cx-x,cy-y)
+            .rotate(rad2deg(angle), cx, cy);
+        txt.move(cx-x,cy-y-dt)
+            .rotate(rad2deg(angle), cx, cy);
+
+        tri.mouseover(function(){
+            this.front();
+            txt.front();
+            txt.move(cx-x,cy-y-dt)
+                .rotate(rad2deg(angle), cx, cy)
+                .animate(100)
+                .move(cx-x, cy-y-dt-dr);
+
+            this.move(cx-x,cy-y)
+                .rotate(rad2deg(angle), cx, cy)
+                .animate(100)
+                .move(cx-x, cy-y-dr);
+
+            //this.plot(pts);
+
+        }).mouseout(function(){
+            this.stop();
+            txt.stop();
+            this.front();
+            txt.front();
+            this.move(cx-x, cy-y)
+                .rotate(rad2deg(angle), cx, cy);
+            txt.move(cx-x,cy-y-dt)
+                .rotate(rad2deg(angle), cx, cy);
+        });
+
+        var group = draw.group();
+        group.add(tri);
+        group.add(txt);
+        //txt.center(tri.cx(),tri.cy());
+
+        tri.linkTo('http://google.com');
+
+        return tri;
+    }
+
+    var subjects = ['Intro','Academics','Projects','Research','Personal'];
+    var n = subjects.length;
+    var ts = [];
+    for(i=0; i<n; ++i){
+        var t = get_triangle(size/3, i, n, 784/2, 784/2, subjects[i]);
+        ts.push(t);
+    }
+
+</script>
+
 <img src="images/profile.jpg"/>
 <p>I'm a Rising Junior at Olin College of Engineering.</p>
-<p>My core interests are Robotics -- all aspects of Robotics, encompassing software, electrical, and mechanical components, are fascinating to me.</p>
-<p>My experiences include Machine Learning, Computer Vision, Computer Graphics, App Development, Robot Design/Fabrication, etc.</p>
+<p>My core interests are Robotics -- all aspects of Robotics, encompassing software, electrical, and mechanical
+    components, are fascinating to me.</p>
+<p>My experiences include Machine Learning, Computer Vision, Computer Graphics, App Development, Robot
+    Design/Fabrication, etc.</p>
 
 {% assign languages = "C|C++|Python|Javascript|HTML|Bash|Java|MATLAB" | split: "|" %}
 {% assign frameworks = "ROS|CUDA|MySQL|OpenGL|WebGL|MongoDB|Node/Express|QT|WINAPI|Android|Arduino" | split: "|" %}
 {% assign fabrications = "Solidworks|3D Printing|Sheet Metal|Mill(CNC/Manual)|Lathe|MIG Welder" | split: "|" %}
 
 <ul>
-	<li>
-		<span>Languages</span>
-		<ul>
-			{% for language in languages %}
-			<li>{{ language }}</li>
-			{% endfor %}
-		</ul>
-	</li>
+    <li>
+        <span>Languages</span>
+        <ul>
+            {% for language in languages %}
+            <li>{{ language }}</li>
+            {% endfor %}
+        </ul>
+    </li>
 
-	<li>
-		<span>Frameworks</span>
-		<ul>
-			{% for framework in frameworks %}
-			<li>{{ framework }}</li>
-			{% endfor %}
-		</ul>
-	
-	</li>
-	
-	<li>
-		<span>Fabrication</span>
-		<ul>
-			{% for fabrication in fabrications %}
-			<li>{{ fabrication }}</li>
-			{% endfor %}
-		</ul>
-	</li>
+    <li>
+        <span>Frameworks</span>
+        <ul>
+            {% for framework in frameworks %}
+            <li>{{ framework }}</li>
+            {% endfor %}
+        </ul>
+
+    </li>
+
+    <li>
+        <span>Fabrication</span>
+        <ul>
+            {% for fabrication in fabrications %}
+            <li>{{ fabrication }}</li>
+            {% endfor %}
+        </ul>
+    </li>
 
 </ul>
