--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 title : Index
-layout : default
+layout : index
 ---
 <div id="drawing" align="center">
 
@@ -21,7 +21,7 @@ layout : default
 
     var size = 784;
     var draw = SVG('drawing').size(size, size);
-    function get_triangle(r, i, n, cx, cy, text){
+    function get_triangle(r, i, n, cx, cy, text, link){
         var theta = 2*Math.PI / n;
         var angle = theta * i;
         var col = hsv2rgb(i/n,1.0,1.0);
@@ -36,18 +36,14 @@ layout : default
             family : 'Helvetica',
             size : 20,
             fill : col,
-            weight : 'bold'
+            weight : 'bold',
+            shadow : '2px 2px 0px'
         });
 
         txt.after(tri);
 
         var dr = r / 10.0;
         var dt = r / 10.0;
-
-        var gradient = draw.gradient('linear', function(stop) {
-            stop.at(0, '#333');
-            stop.at(1, '#fff');
-        });
 
         tri.move(cx-x,cy-y)
             .rotate(rad2deg(angle), cx, cy);
@@ -66,9 +62,6 @@ layout : default
                 .rotate(rad2deg(angle), cx, cy)
                 .animate(100)
                 .move(cx-x, cy-y-dr);
-
-            //this.plot(pts);
-
         }).mouseout(function(){
             this.stop();
             txt.stop();
@@ -85,59 +78,76 @@ layout : default
         group.add(txt);
         //txt.center(tri.cx(),tri.cy());
 
-        tri.linkTo('http://google.com');
+        tri.linkTo(link);
 
         return tri;
     }
 
+    function get_ring(txt, a1, a2, r, cx, cy){
+        var ring = draw.text(function(add){
+            add.tspan(txt);
+        });
+
+        var x0 = r * Math.cos(a1);
+        var y0 = -r * Math.sin(a1);
+
+        var x1 = r * Math.cos(a2);
+        var y1 = -r * Math.sin(a2);
+        var d = r*2;
+
+        var path = ('M {0},{1} m 0,-{2} ' +
+            'a {2},{2} 0 0,1 0,{3} ' +
+            'a {2},{2} 0 0,1 0,-{3} ')
+            .format(cx, cy, r, d);
+        ring.path(path).font({
+            family : 'Helvetica',
+            size : 30,
+            fill : '#888888',
+            weight : 'bold'
+        });
+        ring.animate(10000)
+            .rotate(-360,cx,cy)
+            .loop();
+    }
+
+    // draw subject-wise polygons ...
     var subjects = ['Intro','Academics','Projects','Research','Personal'];
+    var links = ['./intro.html', './Academics', 'projects.html', 'research.html', 'personal.html'];
+    var cx = size/2;
+    var cy = size/2;
+    var r = size/3;
     var n = subjects.length;
     var ts = [];
     for(i=0; i<n; ++i){
-        var t = get_triangle(size/3, i, n, 784/2, 784/2, subjects[i]);
+        var t = get_triangle(r, i, n, cx, cy, subjects[i], links[0]);
         ts.push(t);
     }
 
+    // draw text ring ...
+    // var ring = draw.text(function(add){
+    //     add.tspan(
+    //         'YOONYOUNG CHO | ' +
+    //         'Robotics/Software Engineer | ' +
+    //         'Olin College of Engineering, Class of 2019 | ' +
+    //         'aaaaaaaaaaaaaaaaaa');
+    // });
+    // var path = ('M {0},{1} m 0,-{2} ' +
+    //     'a {2},{2} 0 0,1 {2},{2}' +
+    //     'a {2},{2} 0 0,1 0,-{3}')
+    //     .format(cx, cy, size * 2/5, size * 4/5);
+    // ring.path(path).font({
+    //     family : 'Helvetica',
+    //     size : 30,
+    //     fill : '#000000',
+    //     weight : 'bold',
+    //     shadow : '2px 2px 0px'
+    // });
+    get_ring(
+        'YOONYOUNG CHO | ' +
+        'Robotics/Software Engineer | ' +
+        'Olin College of Engineerinng, Class of 2019 | ' +
+        '213-220-3492 | ' +
+        'jchocholate@gmail.com | |',
+        deg2rad(90+30), deg2rad(90-30), size*2/5, cx, cy);
+
 </script>
-
-<img src="images/profile.jpg"/>
-<p>I'm a Rising Junior at Olin College of Engineering.</p>
-<p>My core interests are Robotics -- all aspects of Robotics, encompassing software, electrical, and mechanical
-    components, are fascinating to me.</p>
-<p>My experiences include Machine Learning, Computer Vision, Computer Graphics, App Development, Robot
-    Design/Fabrication, etc.</p>
-
-{% assign languages = "C|C++|Python|Javascript|HTML|Bash|Java|MATLAB" | split: "|" %}
-{% assign frameworks = "ROS|CUDA|MySQL|OpenGL|WebGL|MongoDB|Node/Express|QT|WINAPI|Android|Arduino" | split: "|" %}
-{% assign fabrications = "Solidworks|3D Printing|Sheet Metal|Mill(CNC/Manual)|Lathe|MIG Welder" | split: "|" %}
-
-<ul>
-    <li>
-        <span>Languages</span>
-        <ul>
-            {% for language in languages %}
-            <li>{{ language }}</li>
-            {% endfor %}
-        </ul>
-    </li>
-
-    <li>
-        <span>Frameworks</span>
-        <ul>
-            {% for framework in frameworks %}
-            <li>{{ framework }}</li>
-            {% endfor %}
-        </ul>
-
-    </li>
-
-    <li>
-        <span>Fabrication</span>
-        <ul>
-            {% for fabrication in fabrications %}
-            <li>{{ fabrication }}</li>
-            {% endfor %}
-        </ul>
-    </li>
-
-</ul>
