saving progress on dice animation

--- a/index.html
+++ b/index.html
@@ -121,11 +121,11 @@ layout : index
         }
 
         get_ring(
-            'YOONYOUNG CHO | ' +
-            'Robotics/Software Engineer | ' +
-            'Olin College of Engineerinng, Class of 2019 | ' +
+            '| YOONYOUNG CHO | ' +
+            'Robotics & Software Engineer | ' +
+            'Olin College of Engineering, Class of 2019 | ' +
             '213-220-3492 | ' +
-            'jchocholate@gmail.com | |',
+            'jchocholate@gmail.com |',
             deg2rad(90+30), deg2rad(90-30), size*2/5, cx, cy);
 
         var grad = draw.gradient('radial', function(stop){
@@ -141,6 +141,4 @@ layout : index
         var bk = draw.rect(size,size).radius(size).fill(grad);
         bk.back();
     //});
-
-
 </script>
