--- a/research.html
+++ b/research.html
@@ -5,5 +5,17 @@ layout : default
 
 <ul>
 	<li><a href="https://olinrobotics.github.io">Olin Robotics</a></li>
+	<ul>
+		<li>
+			ST-R17 C++ ROS Driver (ros_control compatible)
+		</li>
+		<li>Object Localization and Identification with OpenCV Stereo Vision and Sphynx Text-To-Speech Library</li>
+
+	</ul>
 	<li><a href="https://bluetoothfishtagging.github.io">RFID-enabled Fish Tracking</a></li>
+	<ul>
+		<li>Android Application for entry</li>
+		<li>Web-based interface on Heroku deployment</li>
+		<li><a>IEEE Oceans'17 Paper</a></li>
+	</ul>
 </ul>
