--- a/intro.html
+++ b/intro.html
@@ -11,7 +11,7 @@ layout : default
     Design/Fabrication, etc.</p>
 
 {% assign languages = "C|C++|Python|Javascript|HTML|Bash|Java|MATLAB" | split: "|" %}
-{% assign frameworks = "ROS|CUDA|MySQL|OpenGL|WebGL|MongoDB|Node/Express|QT|WINAPI|Android|Arduino" | split: "|" %}
+{% assign frameworks = "ROS|Tensorflow|CUDA|Android|OpenGL|WebGL|MySQL|MongoDB|AWS|Node/Express|QT|Arduino|WINAPI" | split: "|" %}
 {% assign fabrications = "Solidworks|3D Printing|Sheet Metal|Mill(CNC/Manual)|Lathe|MIG Welder" | split: "|" %}
 
 <ul>
