--- a/projects.html
+++ b/projects.html
@@ -81,13 +81,23 @@ projects:
     var anim = new DiceAnimation();
 
     $(document).ready(function(){
-        var container = $("#slide-dice");
 
+        $("#dice-gui").click(function(){
+            console.log(this);
+            $(this).css({'display':'none'});
+        });
+
+        var container = $("#slide-dice");
         anim.initContext(container);
+        anim.initCannon();
+        //anim.throw(function(){});
         anim.animate();
 
-        $("#slide-random").click(function(){
-            console.log("click");
+        $("#slide-dice").click(function(){
+            anim.throw(function(){
+                var n = Math.floor(Math.random() * maxSlides);
+                showSlide(n);
+            });
         });
     });
 </script>
@@ -95,7 +105,9 @@ projects:
 <div class="slideshow-container">
     <!-- Dice -->
     <div class="mySlide fade Project" id="slide-dice">
-
+        <div id="dice-gui">
+            <p style="position:relative; top:80%; color: white"> Click to Roll To a Random Project! </p>
+        </div>
     </div>
 
 	{% for project in page.projects %}
@@ -117,9 +129,9 @@ projects:
 	<a class="next" onclick="showSlide(slideIndex+1)">&#10095;</a>
 </div>
 
-<div style="text-align:center">
-    <a href="#" id="slide-random"><i class="fa fa-random" aria-hidden="true"></i></a>
+<div style="text-align:center; position: relative; width:99%; margin: 10px auto;">
+    <a href="#" id="slide-random" onclick="showSlide(0)"><i class="fa fa-random" aria-hidden="true"><span class="dot" style="display:none"></span></i></a>
 	{% for project in page.projects %}
-	<span class="dot" onclick="showSlide({{ forloop.index0 }})"></span>
+	<span class="dot" onclick="showSlide({{ forloop.index }})"></span>
 	{% endfor %}
 </div>
