--- a/projects.html
+++ b/projects.html
@@ -102,6 +102,11 @@ projects:
     });
 </script>
 
+<div style="margin: 0 auto; width:200px; text-align:center; font-weight: bold">
+    <i class="fa fa-tv" aria-hidden="true"></i>
+    Projects Browser!
+</div>
+
 <div class="slideshow-container">
     <!-- Dice -->
     <div class="mySlide fade Project" id="slide-dice">
