--- a/github.html
+++ b/github.html
@@ -5,51 +5,60 @@ projects :
  - link: ArduinoRemoteCar
    title: Arduino Remote Car
    descr: Control Arduino Car Remotely Through ROS
+   tag: Arduino | ROS
  - link: 2048_AI 
    title: 2048 A.I.
    descr: 2048 AI emulating the Architecture of Google Deepmind
+   tag: Tensorflow | ML
  - link: RubiksCube
    title: Rubiks Cube
-   descr: Interactive Rubiks Cube with THREE.js 
+   descr: Interactive Rubiks Cube with THREE.js
+   tag: THREE.js | Graphics
  - link: ConvNet
    title: Convolutional Neural Network
    descr: GPU-accelerated Convolutional Neural Network with CUDA
+   tag: CUDA | GPGPU | ML
  - link: TunaCounter
    title: Tuna Counter
    descr: "Automated Tuna Counting with OpenCV"
+   tag: OpenCV | C++ | Python
  - link: Orchestrator
    title: Orchestrator
    descr: Rehearsal Schedule Coordination Application
+   tag: C++ | GUI | Algorithm
  - link: AudioLocalizer
    title: Audio Localizer
    descr: Audio Localizer
+   tag: Arduino | Signals
  - link: Lin1_Project
    title: 3D Reconstruction
    descr: 3D Reconstruction
+   tag: Python | Math
  - link: DigitParser
    title: Digit Parser
    descr: Neural Network Digit Recognition
+   tag: C++ | ML
  - link: U_ML 
    title: Machine-Learning
    descr: Udacity Machine-Learning Nanodegree Program
+   tag: Python | ML
  - link: OlinScheduler
    title: Olin Scheduler 
    descr: Automated Data Collection and GUI for Easier Scheduling
+   tag: Python | GUI | Crawling
  - link: Composer
    title: Composer
    descr: Visual Music Composition Application
- - link: Orchestrator
-   title: Orchestrator
-   descr: Rehearsal Schedule Coordination Application
-
+   tag: Python | Math
 ---
 <div class="slideshow-container">
 	{% for project in page.projects %}
-	<div class="mySlide fade Project">
+	<div class="mySlide fade Project" style="padding:4%">
 		<a href={{project.link}}>{{project.title}}</a>
 		<p> {{project.descr}} </p>
 		<iframe src= {{ project.link }}></iframe>
-		<a href="https://github.com/yycho0108/{{project.link}}">@ Github Repo</a>
+		<a  href="https://github.com/yycho0108/{{project.link}}">@ Github Repo</a>
+        <p style="float:right; color:lightcoral"> {{ project.tag }}</p>
 	</div>
 	{% endfor %}
 	<a class="prev" onclick="showSlide(slideIndex-1)">&#10094;</a>
