--- a/github.html
+++ b/github.html
@@ -1,63 +1,15 @@
 ---
 title : Github Projects
 layout : projects
-projects :
- - link: ArduinoRemoteCar
-   title: Arduino Remote Car
-   descr: Control Arduino Car Remotely Through ROS
-   tag: Arduino | ROS
- - link: 2048_AI 
-   title: 2048 A.I.
-   descr: 2048 AI emulating the Architecture of Google Deepmind
-   tag: Tensorflow | ML
- - link: RubiksCube
-   title: Rubiks Cube
-   descr: Interactive Rubiks Cube with THREE.js
-   tag: THREE.js | Graphics
- - link: ConvNet
-   title: Convolutional Neural Network
-   descr: GPU-accelerated Convolutional Neural Network with CUDA
-   tag: CUDA | GPGPU | ML
- - link: TunaCounter
-   title: Tuna Counter
-   descr: "Automated Tuna Counting with OpenCV"
-   tag: OpenCV | C++ | Python
- - link: Orchestrator
-   title: Orchestrator
-   descr: Rehearsal Schedule Coordination Application
-   tag: C++ | GUI | Algorithm
- - link: AudioLocalizer
-   title: Audio Localizer
-   descr: Audio Localizer
-   tag: Arduino | Signals
- - link: Lin1_Project
-   title: 3D Reconstruction
-   descr: 3D Reconstruction
-   tag: Python | Math
- - link: DigitParser
-   title: Digit Parser
-   descr: Neural Network Digit Recognition
-   tag: C++ | ML
- - link: U_ML 
-   title: Machine-Learning
-   descr: Udacity Machine-Learning Nanodegree Program
-   tag: Python | ML
- - link: OlinScheduler
-   title: Olin Scheduler 
-   descr: Automated Data Collection and GUI for Easier Scheduling
-   tag: Python | GUI | Crawling
- - link: Composer
-   title: Composer
-   descr: Visual Music Composition Application
-   tag: Python | Math
 ---
+
 <div class="slideshow-container">
-	{% for project in page.projects %}
+	{% for project in site.data.gh_projects %}
 	<div class="mySlide fade Project" style="padding:4%">
 		<a href={{project.link}}>{{project.title}}</a>
 		<p> {{project.descr}} </p>
 		<iframe src= {{ project.link }}></iframe>
-		<a  href="https://github.com/yycho0108/{{project.link}}">@ Github Repo</a>
+		<a  href="https://github.com/yycho0108/{{project.link}}">[Github]</a>
         <p style="float:right; color:lightcoral"> {{ project.tag }}</p>
 	</div>
 	{% endfor %}
@@ -66,7 +18,7 @@ projects :
 </div>
 
 <div style="text-align:center">
-	{% for project in page.projects %}
+	{% for project in site.data.gh_projects %}
 	<span class="dot" onclick="showSlide({{ forloop.index0 }})"></span> 
 	{% endfor %}
 </div>
