refactoring personal, adding webfonts

--- a/intro.html
+++ b/intro.html
@@ -10,7 +10,7 @@ layout : default
 <p>My experiences include Machine Learning, Computer Vision, Computer Graphics, App Development, Robot
     Design/Fabrication, etc.</p>
 
-{% assign languages = "C|C++|Python|Javascript|HTML|Bash|Java|MATLAB" | split: "|" %}
+{% assign languages = "C/C++|Python|Javascript|MATLAB|HTML|Bash|Java" | split: "|" %}
 {% assign frameworks = "ROS|Tensorflow|CUDA|Android|OpenGL|WebGL|MySQL|MongoDB|AWS|Node/Express|QT|Arduino|WINAPI" | split: "|" %}
 {% assign fabrications = "Solidworks|3D Printing|Sheet Metal|Mill(CNC/Manual)|Lathe|MIG Welder" | split: "|" %}
 
