--- a/personal.html
+++ b/personal.html
@@ -1,7 +1,8 @@
 ---
-title : Music
-layout : default
+title: Personal
+layout: default
 ---
+<h1> Music </h1>
 <div class="Music">
 	<p>Scenic.mp3</p>
 	<audio controls>
@@ -38,3 +39,12 @@ layout : default
 		<source src="audios/Sigh.mp3" type="audio/mp3">
 	</audio>
 </div>
+
+<hline></hline>
+<h2> Art </h2>
+<dl>
+	<dt><a href="https://drive.google.com/folderview?id=0B75j6bliWwyTY1BCQktLV0Y5elE&usp=sharing">Thematic Design</a></dt>
+	<dd>A theme-based portfolio, designing upon a single spark of strong emotion.</dd>
+	<dt><a href="https://drive.google.com/folderview?id=0B75j6bliWwyTMnhQREE0S0JIZGc&usp=sharing">Teachers Collection</a></dt>
+	<dd>A portfolio developed upon the appreciation for my teachers at Stevenson School.</dd>
+</dl>
