--- a/projects.html
+++ b/projects.html
@@ -27,9 +27,13 @@ layout : projects
     });
 </script>
 
-<div style="margin: 0 auto; width:200px; text-align:center; font-weight: bold;">
-    <i class="fa fa-tv" aria-hidden="true"></i>
-    Projects Browser!
+<div style="margin: 0 auto; width:800px; text-align:center; font-weight: bold; font-family: anton;">
+	<div>
+		<h2 class="browser-header">
+			<i class="fa fa-tv" aria-hidden="true"></i> Projects Browser!
+			<!--<p style="margin:10px;"> Projects Browser! </p> -->
+		</h2>
+	</div>
 </div>
 
 <div class="slideshow-container">
