--- a/research.html
+++ b/research.html
@@ -4,18 +4,22 @@ layout : default
 ---
 
 <ul>
-	<li><a href="https://olinrobotics.github.io">Olin Robotics</a></li>
+	<li><a href="https://olinrobotics.github.io">Olin Interactive Robotics Lab [2015-2017]</a></li>
 	<ul>
-		<li>
-			ST-R17 C++ ROS Driver (ros_control compatible)
-		</li>
-		<li>Object Localization and Identification with OpenCV Stereo Vision and Sphynx Text-To-Speech Library</li>
-
+		<li><a href="https://github.com/yycho0108/st_r17_ros_driver">ST-R17 C++ ROS Driver (ros_control compatible)</a></li>
+		<li><a href="https://github.com/olinrobotics/irl/tree/master/irl_features/irl_stereo">Object Localization and Identification with OpenCV Stereo Vision</a></li>
+		<li>Auditory Command Comprehension with Sphynx Speech-To-Test Library</li>
 	</ul>
-	<li><a href="https://bluetoothfishtagging.github.io">RFID-enabled Fish Tracking</a></li>
+	<li><a href="https://bluetoothfishtagging.github.io">RFID-enabled Fish Tracking [2015-2016]</a></li>
 	<ul>
-		<li>Android Application for entry</li>
-		<li>Web-based interface on Heroku deployment</li>
-		<li><a>IEEE Oceans'17 Paper</a></li>
+		<li>Android Application for Fishermen</li>
+		<li>Web-based database interface on Heroku deployment</li>
+		<li><a>IEEE Oceans'16 Paper</a></li>
+	</ul>
+	<li><a href="https://github.com/Olin-Aero/iarc-2017">Olin IARC [2016-2017]</a></li>
+	<ul>
+		<li><a href="https://github.com/Olin-Aero/iarc-2017/tree/master/iarc_sim_2d">Fast 2D Simulation Engine (C++/QT)</a></li>
+		<li><a href="https://github.com/Olin-Aero/iarc-2017/tree/master/iarc_sim_3d">High Fidelity Gazebo Simulation</a></li>
+		<li><a href="https://github.com/Olin-Aero/iarc-2017/tree/filter2/iarc_roombafilter">Multi-Target Model-based Kalman Filter</a></li>
 	</ul>
 </ul>
